--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="artist-statement">
         <h2>Artist Statement</h2>
         <p>
-            Mission in Motion: Apollo 13 is a creative reimagining of one of NASA’s most famous missions, blending archival imagery and storytelling to explore the journey in reverse.Starting with the crew’s recovery and ending at launch, this project highlights the emotional tension and uncertainty of space exploration. Through visual elements, I hope to draw viewers into the emotional highs and lows of the mission while encouraging them to consider how we tell stories of triumph and adversity in history.
+            Mission in Motion: Apollo 13 is a creative reimagining of one of NASA’s most famous missions, blending archival imagery, sound, and storytelling to explore the journey in reverse. Starting with the crew’s recovery and ending at launch, this project highlights the emotional tension and uncertainty of space exploration. By incorporating audio clips alongside visual elements, I hope to immerse viewers in the highs and lows of the mission while encouraging them to think about how we tell stories of triumph and challenge in history.
         </p>
     </div>
     <script src="sketch.js"></script>
